--- a/Farafontova.ipynb
+++ b/Farafontova.ipynb
@@ -291,12 +291,13 @@
     "idx_gaia,sep2d_gaia, _ = coords.match_to_catalog_sky(tmass_coords)\n",
     "idx_gaia1,sep2d_gaia1, _1 = coords.match_to_catalog_sky(wise_coords)\n",
     "idx_gaia2,sep2d_gaia2, _2 = coords.match_to_catalog_sky(panstar_coords)\n",
-    "idx_gaia3,sep2d_gaia3, _3 = coords.match_to_catalog_sky(msx_coords)\n"
+    "idx_gaia3,sep2d_gaia3, _3 = coords.match_to_catalog_sky(msx_coords)\n",
+    "#добавить это все в таблицу"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "id": "ddd81b4c-4376-4650-9994-b71c461bab59",
    "metadata": {},
    "outputs": [
@@ -304,7 +305,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Query finished. [astroquery.utils.tap.core]\n",
       " Jmag \n",
       " mag  \n",
       "------\n",
@@ -323,28 +323,95 @@
       "16.152\n",
       "16.273\n",
       "Length = 4964 rows\n",
-      "[19.689428 19.689428 19.611189 ... 20.522964 16.551487 20.726206] mag\n"
+      "phot_g_mean_mag\n",
+      "      mag      \n",
+      "---------------\n",
+      "      20.549162\n",
+      "      20.549162\n",
+      "      17.986528\n",
+      "      20.567236\n",
+      "       18.88241\n",
+      "      18.335278\n",
+      "            ...\n",
+      "      15.110878\n",
+      "      21.099575\n",
+      "      21.099575\n",
+      "      15.110878\n",
+      "      15.110878\n",
+      "       21.90759\n",
+      "      18.534052\n",
+      "Length = 4964 rows\n"
      ]
     }
    ],
    "source": [
-    "from astropy.table import QTable\n",
-    "ngc_center = SkyCoord.from_name('NGC 2266')\n",
-    "job = Gaia.cone_search_async(ngc_center, radius=0.5*u.deg)\n",
-    "ngc_table = job.get_results()\n",
-    "\n",
-    "ngc_table = QTable(ngc_table)\n",
     "Jmag=tmass_table['Jmag'][idx_gaia]\n",
+    "Hmag=tmass_table['Hmag'][idx_gaia]\n",
+    "Kmag=tmass_table['Kmag'][idx_gaia]\n",
     "print(Jmag)\n",
-    "Gmag=ngc_table['phot_g_mean_mag'][idx_gaia]\n",
+    "Gmag=r['phot_g_mean_mag'][idx_gaia]\n",
     "print(Gmag)\n",
-    "Bmag=ngc_table['phot_bp_mean_mag'][idx_gaia]"
+    "W1mag=wise_table['W1mag']\n",
+    "W2mag=wise_table['W2mag']\n",
+    "W3mag=wise_table['W3mag']\n",
+    "W4mag=wise_table['W4mag']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "11f1a6d8-d891-476b-8e4d-5d9a3f30c98a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  113.68294   113.68294  1204.3391  ... 17021.938      32.53297\n",
+      "   727.3432 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Flux_gaia=10**((Gmag-25.6884)/-2.5)#convert dc.zah.uni-heidelberg.de/tableinfo/gaia.dr2\n",
+    "print(Flux)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "7854f41b-5387-4d82-adec-a2d04683205d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Flux_2massJ=1594*10**(-0.4*Jmag)\n",
+    "Flux_2massH=1024*10**(-0.4*Hmag)\n",
+    "Flux_2massK=666.7*10**(-0.4*Kmag)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "14c1ea3b-f2c5-4b81-bcdd-a712add6d54b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00100205 0.00100205 0.00051867 ... 0.01368007 0.00055168 0.0004935 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Flux_2massJ)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11f1a6d8-d891-476b-8e4d-5d9a3f30c98a",
+   "id": "c61ec36c-298f-4755-acb0-8bed022252fa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -352,15 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7854f41b-5387-4d82-adec-a2d04683205d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14c1ea3b-f2c5-4b81-bcdd-a712add6d54b",
+   "id": "26776f1d-2b08-4641-886b-66f88b08f273",
    "metadata": {},
    "outputs": [],
    "source": []
