--- a/Farafontova.ipynb
+++ b/Farafontova.ipynb
@@ -373,18 +373,18 @@
     }
    ],
    "source": [
-    "Flux_gaia=10**((Gmag-25.6884)/-2.5)#convert dc.zah.uni-heidelberg.de/tableinfo/gaia.dr2\n",
+    "Flux_gaia=10**((Gmag-25.6884)/-2.5)#https://dc.zah.uni-heidelberg.de/tableinfo/gaia.dr2epochflux\n",
     "print(Flux)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "7854f41b-5387-4d82-adec-a2d04683205d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Flux_2massJ=1594*10**(-0.4*Jmag)\n",
+    "Flux_2massJ=1594*10**(-0.4*Jmag)#https://wise2.ipac.caltech.edu/docs/release/allsky/expsup/sec4_4h.html\n",
     "Flux_2massH=1024*10**(-0.4*Hmag)\n",
     "Flux_2massK=666.7*10**(-0.4*Kmag)\n",
     "\n"
