--- a/Farafontova_healpix.ipynb
+++ b/Farafontova_healpix.ipynb
@@ -93,12 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "d483642d-f3c2-4eec-aef6-44be17bfdbd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32601597\n"
+     ]
+    }
+   ],
    "source": [
-    "#all polygon and search by grid in gaia how many rows is in polygon\n",
+    "#all polygon search and search by grid in gaia how many rows is in polygon\n",
     "from astroquery.gaia import Gaia\n",
     "from astroquery.vizier import Vizier\n",
     "coord = SkyCoord(ra*u.deg, dec*u.deg, frame='icrs')\n",
@@ -111,166 +119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "e161c1d8-1b24-4470-a559-29bd57c32ded",
    "metadata": {},
    "outputs": [],
    "source": [
     "np.savetxt('/home/anastasia/Documents/AUTUMN2023/Gaia1.txt',gair_table,delimiter='\t',fmt='%s')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bb881e7-c0eb-4df7-b619-eb584bdd0a2c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from astropy import coordinates as coord\n",
-    "from astropy import units as u\n",
-    "from scipy.sparse import lil_matrix\n",
-    "'''\n",
-    "grid_ra_values = r\n",
-    "grid_dec_values = d\n",
-    "\n",
-    "table_ra_values = gair_table['RAJ2000']\n",
-    "table_dec_values = gair_table['DEJ2000']\n",
-    "\n",
-    "grid_coords = coord.SkyCoord(grid_ra_values, grid_dec_values, unit=(u.degree, u.degree), frame='icrs')\n",
-    "table_coords = coord.SkyCoord(table_ra_values, table_dec_values, unit=(u.degree, u.degree), frame='icrs')\n",
-    "\n",
-    "box_width = 0.01 * u.degree\n",
-    "box_height = 0.01 * u.degree\n",
-    "\n",
-    "grid_ra_float = np.array(grid_coords.ra.deg)\n",
-    "grid_dec_float = np.array(grid_coords.dec.deg)\n",
-    "\n",
-    "num_boxes_ra = int((grid_coords.ra.max() - grid_coords.ra.min()) / box_width) + 1\n",
-    "num_boxes_dec = int((grid_coords.dec.max() - grid_coords.dec.min()) / box_height) + 1\n",
-    "\n",
-    "box_indices_ra = np.floor((table_coords.ra - grid_coords.ra.min()) / box_width).astype(int)\n",
-    "box_indices_dec = np.floor((table_coords.dec - grid_coords.dec.min()) / box_height).astype(int)\n",
-    "\n",
-    "valid_indices = (box_indices_ra >= 0) & (box_indices_ra < num_boxes_ra) & (box_indices_dec >= 0) & (box_indices_dec < num_boxes_dec)\n",
-    "box_indices_ra = box_indices_ra[valid_indices]\n",
-    "box_indices_dec = box_indices_dec[valid_indices]\n",
-    "\n",
-    "\n",
-    "num_rows_in_pixel = lil_matrix((num_boxes_dec, num_boxes_ra), dtype=int)\n",
-    "\n",
-    "\n",
-    "for i, j in zip(box_indices_dec, box_indices_ra):\n",
-    "    num_rows_in_pixel[i, j] += 1\n",
-    "\n",
-    "\n",
-    "scalar_sparse = lil_matrix((1,), dtype=int)\n",
-    "\n",
-    "\n",
-    "num_rows_in_pixel += scalar_sparse\n",
-    "\n",
-    "\n",
-    "array_stars = num_rows_in_pixel.toarray()\n",
-    "\n",
-    "print(len(array_stars))\n",
-    "'''\n",
-    "\n",
-    "import numpy as np\n",
-    "from numba import jit\n",
-    "from astropy import coordinates as coord\n",
-    "from astropy import units as u\n",
-    "from scipy.sparse import coo_matrix\n",
-    "\n",
-    "@jit\n",
-    "def compute_num_rows_in_pixel(grid_ra_values, grid_dec_values, table_ra_values, table_dec_values, box_width, box_height):\n",
-    "    grid_coords = coord.SkyCoord(grid_ra_values, grid_dec_values, unit=(u.degree, u.degree), frame='icrs')\n",
-    "    table_coords = coord.SkyCoord(table_ra_values, table_dec_values, unit=(u.degree, u.degree), frame='icrs')\n",
-    "\n",
-    "    grid_ra_float = np.array(grid_coords.ra.deg)\n",
-    "    grid_dec_float = np.array(grid_coords.dec.deg)\n",
-    "\n",
-    "    num_rows_in_pixel = coo_matrix((len(grid_ra_float), len(grid_dec_float)), dtype=np.int64)\n",
-    "\n",
-    "    for box_center_ra, box_center_dec in zip(grid_ra_float.flatten(), grid_dec_float.flatten()):\n",
-    "        box_ra_min = box_center_ra - (box_width / 2)\n",
-    "        box_ra_max = box_center_ra + (box_width / 2)\n",
-    "        box_dec_min = box_center_dec - (box_height / 2)\n",
-    "        box_dec_max = box_center_dec + (box_height / 2)\n",
-    "\n",
-    "        rows_in_pixel = np.where(\n",
-    "            (table_coords.ra.deg >= box_ra_min) & (table_coords.ra.deg <= box_ra_max) &\n",
-    "            (table_coords.dec.deg >= box_dec_min) & (table_coords.dec.deg <= box_dec_max)\n",
-    "        )[0]\n",
-    "\n",
-    "        i, j = int(np.round((box_center_ra - grid_ra_float.min()) / box_width)), int(np.round((box_center_dec - grid_dec_float.min()) / box_height))\n",
-    "\n",
-    "        for row in rows_in_pixel:\n",
-    "            num_rows_in_pixel[i, j] += 1\n",
-    "\n",
-    "    return num_rows_in_pixel\n",
-    "\n",
-    "grid_ra_values = np.ma.getdata(r)\n",
-    "grid_dec_values = np.ma.getdata(d)\n",
-    "\n",
-    "table_ra_values = np.ma.getdata(gair_table['RAJ2000'])\n",
-    "table_dec_values = np.ma.getdata(gair_table['DEJ2000'])\n",
-    "\n",
-    "box_width = 0.01\n",
-    "box_height = 0.01\n",
-    "\n",
-    "result = compute_num_rows_in_pixel(grid_ra_values, grid_dec_values, table_ra_values, table_dec_values, box_width, box_height)\n",
-    "print('ok')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22d7c972-2723-4a7c-9551-d24009991465",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from numba import jit\n",
-    "from numba import types\n",
-    "from numba.types import int64\n",
-    "\n",
-    "grid_ra_values = r\n",
-    "grid_dec_values = d\n",
-    "\n",
-    "table_ra_values = gair_table['RAJ2000']\n",
-    "table_dec_values = gair_table['DEJ2000']\n",
-    "from numba.sparse import lil_matrix\n",
-    "\n",
-    "@jit(nopython=True)\n",
-    "def compute_num_rows_in_pixel(grid_ra_values, grid_dec_values, table_ra_values, table_dec_values, box_width, box_height):\n",
-    "    grid_ra_float = np.array(grid_ra_values)\n",
-    "    grid_dec_float = np.array(grid_dec_values)\n",
-    "    num_rows_in_pixel = lil_matrix((len(grid_ra_float), len(grid_dec_float)), dtype=types.uint32)\n",
-    "\n",
-    "    for box_center_ra, box_center_dec in zip(grid_ra_float.flatten(), grid_dec_float.flatten()):\n",
-    "        box_ra_min = box_center_ra - (box_width / 2)\n",
-    "        box_ra_max = box_center_ra + (box_width / 2)\n",
-    "        box_dec_min = box_center_dec - (box_height / 2)\n",
-    "        box_dec_max = box_center_dec + (box_height / 2)\n",
-    "\n",
-    "        rows_in_pixel = np.where(\n",
-    "            (table_ra_values >= box_ra_min) & (table_ra_values <= box_ra_max) &\n",
-    "            (table_dec_values >= box_dec_min) & (table_dec_values <= box_dec_max)\n",
-    "        )[0]\n",
-    "        i, j = int(np.round((box_center_ra - grid_ra_float.min()) / box_width)), int(np.round((box_center_dec - grid_dec_float.min()) / box_height))\n",
-    "\n",
-    "        num_rows_in_pixel[i, j] = len(rows_in_pixel)\n",
-    "\n",
-    "    return num_rows_in_pixel.toarray()\n",
-    "\n",
-    "grid_coords = coord.SkyCoord(grid_ra_values, grid_dec_values, unit=(u.degree, u.degree), frame='icrs')\n",
-    "table_coords = coord.SkyCoord(table_ra_values, table_dec_values, unit=(u.degree, u.degree), frame='icrs')\n",
-    "\n",
-    "box_width = 0.01\n",
-    "box_height = 0.01\n",
-    "\n",
-    "result_array = compute_num_rows_in_pixel(grid_coords.ra.deg, grid_coords.dec.deg, table_coords.ra.deg, table_coords.dec.deg, box_width, box_height)\n",
-    "\n",
-    "print(len(result_array))"
    ]
   },
   {
